--- a/recommender/package.json
+++ b/recommender/package.json
@@ -3,5 +3,8 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.14"
+  },
+  "dependencies": {
+    "jquery": "^3.7.1"
   }
 }
