--- a/recommender/package.json
+++ b/recommender/package.json
@@ -5,6 +5,7 @@
     "tailwindcss": "^4.0.14"
   },
   "dependencies": {
-    "jquery": "^3.7.1"
+    "jquery": "^3.7.1",
+    "lucide": "^0.487.0"
   }
 }
