fully functional contact form

--- a/recommender/config.ini
+++ b/recommender/config.ini
@@ -3,3 +3,7 @@ SECRET_KEY = django-insecure-a!s+=d^m3_du3mz04+tygwlh*0d^@imn*##!8@@si!5!*4jvme
 
 [test]
 TEST_SECRET_KEY = iufoj=mibkpdz*%bob952x(%49rqgv8gg45k36kjcg76&-y5=!
+
+[EMAIL]
+SMTP_EMAIL = rashmikadt@gmail.com
+SMTP_PASSWORD = tvhcezmwgcarorra
