--- a/chatbot/data/nlu.yml
+++ b/chatbot/data/nlu.yml
@@ -25,3 +25,14 @@ nlu:
     - Recommend a degree for [commerce](subject_interest)
     - I want to be a [civil engineer](career_goal)
     - I prefer [Maharashtra](preferred_state)
+
+- intent: query_knowledge_base
+  examples: |
+    - What [courses](object_type) do you have?
+    - Show me all [institutions](object_type).
+    - Tell me the [description](attribute) of the [Software Engineering](mention).
+    - What’s the [rank](attribute) of [Amrita Vishwa Vidyapeetham](mention)?
+    - Give me details about [Data Analytics](mention).
+    - How long is the [Data Analytics](mention) program?
+    - List some [institutions](object_type) in Colombo.
+    - What’s the [website](attribute) of [University of Colombo](mention)?
