--- a/chatbot/domain.yml
+++ b/chatbot/domain.yml
@@ -17,53 +17,54 @@ intents:
   - ask_system_features
   - ask_feedback
   - recommend_degree
+  - query_knowledge_base
+
+entities:
+  - object_type      # “course” or “institution”
+  - attribute        # e.g. “description”, “rank”
+  - mention          # actual course/institution name
+
+slots:
+  object_type:
+    type: text
+    influence_conversation: false
+    mappings:
+      - type: from_entity
+        entity: object_type
+
+  attribute:
+    type: text
+    influence_conversation: false
+    mappings:
+      - type: from_entity
+        entity: attribute
+
+  mention:
+    type: text
+    influence_conversation: false
+    mappings:
+      - type: from_entity
+        entity: mention
 
 responses:
   utter_greet:
     - text: "Hey! How can I help you today? 😊"
-
   utter_cheer_up:
     - text: "Here's something to brighten your day:"
       image: "https://images.unsplash.com/photo-1596495577886-d920f1fb7238?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=60"
-
   utter_did_that_help:
     - text: "Did that help you out?"
-
   utter_happy:
     - text: "Great, let’s keep going! 🎉"
-
   utter_goodbye:
     - text: "Goodbye! Feel free to reach out anytime. 👋"
-
   utter_iamabot:
     - text: "I'm Pathfinder Assistant, a bot here to help you discover the best educational options."
+  utter_ask_rephrase:
+    - text: "Sorry, I didn’t catch that—could you rephrase?"
 
-  utter_ask_recommendation:
-    - text: "Would you like a course or institution recommendation based on your preferences and profile?"
-
-  utter_ask_course_info:
-    - text: "Sure! Let me know the course name or field you're interested in."
-
-  utter_ask_institution_info:
-    - text: "Which institution are you curious about? I can pull up rankings, programs, and admission info."
-
-  utter_ask_application_process:
-    - text: "You can apply through your dashboard. Want me to guide you to the application section?"
-
-  utter_ask_profile_update:
-    - text: "Would you like to update your academic background, preferred location, or goals?"
-
-  utter_ask_saved_courses:
-    - text: "Here are your saved courses. Do you want to explore them or delete any?"
-
-  utter_ask_system_features:
-    - text: "Our system gives you tailored course and institution suggestions, compares academic options, and even tracks your progress. Would you like a quick demo?"
-
-  utter_ask_feedback:
-    - text: "We’d love your feedback. What can we improve to serve you better?"
-
-  utter_recommend_degree:
-    - text: "Sure! I can help with that. Tell me what subjects you enjoy or your career interests, and I’ll recommend some ideal degree paths."
+actions:
+  - action_query_knowledge_base
 
 session_config:
   session_expiration_time: 60
