--- a/chatbot/config.yml
+++ b/chatbot/config.yml
@@ -1,46 +1,39 @@
-# config.yml
-
-recipe: default.v1
-assistant_id: 20250422-141823-hushed-guitar
+version: "3.1"
 language: en
 
 pipeline:
-  - name: WhitespaceTokenizer
-  - name: RegexFeaturizer
-  - name: LexicalSyntacticFeaturizer
-  - name: CountVectorsFeaturizer
-  - name: CountVectorsFeaturizer
-    analyzer: char_wb
-    min_ngram: 1
-    max_ngram: 4
-  - name: SpacyFeaturizer
-  - name: DIETClassifier
-    epochs: 200
-    constrain_similarities: true
-  - name: EntitySynonymMapper
-  - name: ResponseSelector
-    epochs: 100
-    constrain_similarities: true
-  - name: FallbackClassifier
-    threshold: 0.4
-    ambiguity_threshold: 0.1
+- name: SpacyNLP
+  model: "en_core_web_sm"
+
+- name: WhitespaceTokenizer
+- name: RegexFeaturizer
+- name: LexicalSyntacticFeaturizer
+- name: CountVectorsFeaturizer
+- name: CountVectorsFeaturizer
+  analyzer: char_wb
+  min_ngram: 1
+  max_ngram: 4
+- name: SpacyTokenizer
+- name: SpacyFeaturizer
+- name: SpacyEntityExtractor
+- name: DIETClassifier
+  epochs: 200
+  constrain_similarities: true
+- name: EntitySynonymMapper
+- name: ResponseSelector
+  epochs: 100
+  constrain_similarities: true
+- name: FallbackClassifier
+  threshold: 0.4
+  ambiguity_threshold: 0.1
 
 policies:
-  # 1) Exact match from stories
-  - name: MemoizationPolicy
-
-  # 2) Rule-based fallback for low-confidence predictions
-  - name: RulePolicy
-    core_fallback_threshold: 0.3
-    core_fallback_action_name: "action_default_fallback"
-    enable_fallback_prediction: true
-
-  # 3) NLU fallback classifier (for very low NLU confidence)
-  - name: FallbackClassifier
-    threshold: 0.4
-    ambiguity_threshold: 0.1
-
-  # 4) Transformer-based policy for general conversation
-  - name: TEDPolicy
-    max_history: 5
-    epochs: 100
+- name: MemoizationPolicy
+- name: RulePolicy
+  core_fallback_threshold: 0.4
+  core_fallback_action_name: "action_default_fallback"
+  enable_fallback_prediction: true
+- name: TEDPolicy
+  max_history: 5
+  epochs: 100
+assistant_id: 20250504-230608-potential-bombay
