--- a/chatbot/data/rules.yml
+++ b/chatbot/data/rules.yml
@@ -1,22 +1,12 @@
 version: "3.1"
 
 rules:
-- rule: Say goodbye
-  steps:
-    - intent: goodbye
-    - action: utter_goodbye
-
-- rule: Bot challenge
-  steps:
-    - intent: bot_challenge
-    - action: utter_iamabot
-
 - rule: NLU fallback
   steps:
-    - intent: nlu_fallback
-    - action: utter_ask_rephrase
+  - intent: nlu_fallback
+  - action: utter_ask_rephrase
 
-- rule: KB lookup
+- rule: Core fallback
   steps:
-    - intent: query_knowledge_base
-    - action: action_query_knowledge_base
+  - intent: nlu_fallback
+  - action: action_default_fallback
