--- a/chatbot/domain.yml
+++ b/chatbot/domain.yml
@@ -1,15 +1,5 @@
 version: "3.1"
 
-# ------------------------------------------------------------------------------
-# 1. Session configuration
-# ------------------------------------------------------------------------------
-session_config:
-  session_expiration_time: 60   # minutes
-  carry_over_slots_to_new_session: true
-
-# ------------------------------------------------------------------------------
-# 2. Intents
-# ------------------------------------------------------------------------------
 intents:
   - greet
   - goodbye
@@ -18,7 +8,6 @@ intents:
   - mood_great
   - mood_unhappy
   - bot_challenge
-
   - ask_recommendation
   - ask_course_info
   - ask_institution_info
@@ -27,24 +16,15 @@ intents:
   - ask_saved_courses
   - ask_system_features
   - ask_feedback
-
   - recommend_degree
   - query_knowledge_base
-
-  # fallback intent for low-confidence NLU
   - nlu_fallback
 
-# ------------------------------------------------------------------------------
-# 3. Entities
-# ------------------------------------------------------------------------------
 entities:
-  - object_type      # “course” or “institution”
-  - attribute        # e.g. “description”, “rank”
-  - mention          # actual course/institution name
+  - object_type
+  - attribute
+  - mention
 
-# ------------------------------------------------------------------------------
-# 4. Slots
-# ------------------------------------------------------------------------------
 slots:
   object_type:
     type: text
@@ -67,25 +47,22 @@ slots:
       - type: from_entity
         entity: mention
 
-# ------------------------------------------------------------------------------
-# 5. Responses
-# ------------------------------------------------------------------------------
 responses:
   utter_greet:
     - text: "Hey! How can I help you today? 😊"
+
+  utter_goodbye:
+    - text: "Goodbye! Feel free to reach out anytime. 👋"
 
   utter_happy:
     - text: "Great, let’s keep going! 🎉"
 
   utter_cheer_up:
     - text: "Here's something to brighten your day:"
-      image: "https://images.unsplash.com/photo-1596495577886-d920f1fb7238?auto=format&fit=crop&w=800&q=60"
+      image: "https://images.unsplash.com/photo-1596495577886-d920f1fb7238?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=60"
 
   utter_did_that_help:
     - text: "Did that help you out?"
-
-  utter_goodbye:
-    - text: "Goodbye! Feel free to reach out anytime. 👋"
 
   utter_iamabot:
     - text: "I'm Pathfinder Assistant, here to guide you."
@@ -96,11 +73,10 @@ responses:
   utter_recommend_degree:
     - text: "Sure! I can help with that. Tell me what subjects you enjoy or your career interests, and I’ll recommend some ideal degree paths."
 
-# ------------------------------------------------------------------------------
-# 6. Actions
-# ------------------------------------------------------------------------------
 actions:
   - action_query_knowledge_base
-  - action_default_fallback      # make sure this is implemented
-  - action_default_ask_affirmation
+  - action_default_fallback
 
+session_config:
+  session_expiration_time: 60
+  carry_over_slots_to_new_session: true
