--- a/chatbot/requirements.txt
+++ b/chatbot/requirements.txt
@@ -1,233 +1,42 @@
-absl-py==1.4.0
-action==1.4.4
-aio-pika==8.2.3
-aiofiles==24.1.0
-aiogram==2.15
-aiohttp==3.9.5
-aiohttp-retry==2.9.1
-aiormq==6.4.2
-aiosignal==1.3.2
-annotated-types==0.7.0
-APScheduler==3.9.1.post1
-asgiref==3.8.1
-astunparse==1.6.3
-async-timeout==4.0.3
-attrs==22.1.0
-Babel==2.9.1
-backoff==2.2.1
-bidict==0.23.1
-blis==0.7.11
-boto3==1.37.38
-botocore==1.37.38
-CacheControl==0.12.14
-cachetools==5.5.2
-catalogue==2.0.10
-certifi==2025.1.31
-cffi==1.17.1
-charset-normalizer==3.4.1
-click==8.1.8
-cloudpathlib==0.21.0
-cloudpickle==2.2.1
-colorama==0.4.6
-colorclass==2.2.2
-coloredlogs==15.0.1
-colorhash==1.2.1
-confection==0.1.5
-configparser==7.2.0
-confluent-kafka==2.10.0
-cryptography==44.0.2
-cycler==0.12.1
-cymem==2.0.11
-dask==2022.10.2
-Deprecated==1.2.18
-Django==4.2
-django-appconf==1.1.0
-django-compressor==4.5.1
-django-cors-headers==4.7.0
-django-extensions==4.1
-dnspython==2.3.0
-docopt==0.6.2
-en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
-fbmessenger==6.0.0
-filelock==3.18.0
-fire==0.7.0
-flatbuffers==25.2.10
-fonttools==4.57.0
-frozenlist==1.6.0
-fsspec==2025.3.2
-future==1.0.0
-gast==0.4.0
-google-auth==2.39.0
-google-auth-httplib2==0.2.0
-google-auth-oauthlib==1.0.0
-google-pasta==0.2.0
-googleapis-common-protos==1.56.1
-greenlet==3.2.0
-grpcio==1.71.0
-grpcio-health-checking==1.59.5
-grpcio-tools==1.60.2
-h11==0.14.0
-h5py==3.13.0
-httplib2==0.22.0
-httptools==0.6.4
-huggingface-hub==0.30.2
-humanfriendly==10.0
-idna==3.10
-jax==0.4.30
-jaxlib==0.4.30
-Jinja2==3.1.6
-jmespath==1.0.1
-joblib==1.2.0
-jsonpickle==3.0.4
-jsonschema==4.17.3
-keras==2.12.0
-kiwisolver==1.4.8
-langcodes==3.5.0
-language_data==1.3.0
-libclang==18.1.1
-locket==1.0.0
-magic-filter==1.0.12
-marisa-trie==1.2.1
-Markdown==3.8
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-matplotlib==3.5.3
-mattermostwrapper==2.2
-mdurl==0.1.2
-ml_dtypes==0.5.1
-mpmath==1.3.0
-msgpack==1.1.0
-multidict==5.2.0
-murmurhash==1.0.12
-mysqlclient==2.2.7
-networkx==2.6.3
-nltk==3.9.1
-numpy==1.23.5
-oauthlib==3.2.2
-opentelemetry-api==1.16.0
-opentelemetry-exporter-jaeger==1.16.0
-opentelemetry-exporter-jaeger-proto-grpc==1.16.0
-opentelemetry-exporter-jaeger-thrift==1.16.0
-opentelemetry-exporter-otlp==1.16.0
-opentelemetry-exporter-otlp-proto-grpc==1.16.0
-opentelemetry-exporter-otlp-proto-http==1.16.0
-opentelemetry-proto==1.16.0
-opentelemetry-sdk==1.16.0
-opentelemetry-semantic-conventions==0.37b0
-opt_einsum==3.4.0
-packaging==20.9
-pamqp==3.2.1
-pandas==2.2.3
-partd==1.4.2
-pathlib_abc==0.1.1
-pathy==0.11.0
-pillow==11.2.1
-pluggy==1.5.0
-portalocker==2.10.1
-preshed==3.0.9
-prompt-toolkit==3.0.28
-propcache==0.3.1
-protobuf==4.23.3
-psycopg2-binary==2.9.10
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pycparser==2.22
-pydantic==1.10.9
-pydantic_core==2.33.2
-pydot==1.4.2
-Pygments==2.19.1
-PyJWT==2.10.1
-pykwalify==1.8.0
-pymongo==4.3.3
-PyMySQL==1.1.1
-pyparsing==3.2.3
-pyreadline3==3.5.4
-pyrsistent==0.20.0
-python-crfsuite==0.9.11
-python-dateutil==2.8.2
-python-engineio==4.12.0
-python-socketio==5.13.0
-pytz==2022.7.1
-pywin32==310
-PyYAML==6.0.2
-questionary==1.10.0
-randomname==0.1.5
-rank-bm25==0.2.2
+# Core
 rasa==3.6.21
 rasa-sdk==3.6.2
-rcssmin==1.1.2
-redis==4.6.0
-regex==2022.10.31
-requests==2.32.3
-requests-oauthlib==2.0.0
-requests-toolbelt==1.0.0
-rich==14.0.0
-rjsmin==1.2.2
-rocketchat-API==1.30.0
-rsa==4.9.1
-ruamel.yaml==0.17.21
-ruamel.yaml.clib==0.2.12
-s3transfer==0.11.5
-safetensors==0.4.5
+
+# Rasa dependencies
 sanic==21.12.2
 Sanic-Cors==2.0.1
-sanic-jwt==1.8.0
-sanic-routing==0.7.2
-scikit-learn==1.1.3
-scipy==1.10.1
-sentence-transformers==3.4.1
-sentry-sdk==1.14.0
-shellingham==1.5.4
-simple-websocket==1.1.0
-six==1.17.0
-sklearn-crfsuite==0.3.6
-skops==0.9.0
-slack_sdk==3.35.0
-smart-open==6.4.0
+sqlalchemy<2.0.0
+typing-extensions>=4.2.0
+
+# spaCy (required by SpacyFeaturizer)
 spacy==3.5.0
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-SQLAlchemy==1.4.54
-sqlparse==0.5.3
-srsly==2.5.1
-structlog==23.3.0
-structlog-sentry==2.1.0
-sympy==1.13.1
-tabulate==0.9.0
-tarsafe==0.0.4
-tensorboard==2.12.3
-tensorboard-data-server==0.7.2
-tensorflow==2.12.0
-tensorflow-estimator==2.12.0
-tensorflow-hub==0.13.0
-tensorflow-intel==2.12.0
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==3.0.1
-terminaltables==3.1.10
-thinc==8.1.12
-threadpoolctl==3.6.0
-thrift==0.21.0
-tokenizers==0.21.1
-toolz==1.0.0
-torch==2.6.0
-tqdm==4.67.1
-tracker==0.1.1
-transformers==4.50.0
-twilio==8.2.2
-typer==0.7.0
-typing-inspection==0.4.0
-typing-utils==0.1.0
-typing_extensions==4.13.2
-tzdata==2025.2
-tzlocal==5.3.1
-ujson==5.10.0
-urllib3==2.4.0
-wasabi==1.1.3
-wcwidth==0.2.13
-weasel==0.4.1
-webexteamssdk==1.6.1
-websockets==10.4
-Werkzeug==3.1.3
-wrapt==1.14.1
-wsproto==1.2.0
-yarl==1.20.0
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl
+
+# Numeric / data
+numpy==1.23.5
+pydantic<1.10.10
+
+# Django (for your custom KB)
+Django==4.2
+
+# Django KB action needs
+django-cors-headers==4.7.0
+
+# Optional: if you need to talk to a database
+psycopg2-binary==2.9.10      # Postgres
+mysqlclient==2.2.7          # MySQL
+
+# HTTP / utils
+requests>=2.28.0
+PyYAML>=6.0
+
+# (already pulled in by Rasa but good to pin)
+werkzeug<3.0.0
+itsdangerous<2.2.0
+jinja2<3.1.0
+
+# (for training evaluation)
+scikit-learn>=1.1.0
+
+# Small helper for safe upgrades
+pip-tools>=6.0.0
